# clipforge

./: .gitignore  docker-compose.yml  package-lock.json
clipforge_api/: clipforge_api.slnx  readme.md  storageProviderContract.yaml
clipforge_api/clipforge_api/: Program.cs  appsettings.json  clipforge_api.csproj
clipforge_api/clipforge_api/Auth/: AuthController.cs  AuthRequest.cs  JwtService.cs  User.cs
clipforge_api/clipforge_api/Clip/: ClipController.cs  ClipEntity.cs  UserClip.cs
clipforge_api/clipforge_api/Core/: ApiController.cs  RequiredAuthController.cs
clipforge_api/clipforge_api/Data/: AppDbContext.cs
clipforge_config/: main.py
clipforge_config/config/: hotkeys.toml  recording.toml  storage.toml
clipforge_fileSystemProvider/: go.mod  main.go  readme.md
clipforge_fileSystemProvider/handlers/: delete.go  fetch.go  helpers.go  list.go  store.go  thumbnail.go
clipforge_fileSystemProvider/server/: routes.go
clipforge_fileSystemProvider/storage/: fs.go  meta.go
clipforge_recorder/: Cargo.toml  README.md
clipforge_recorder/src/capture/: cleanup.rs  device.rs  frame.rs  mod.rs
clipforge_recorder/src/config/: hotkeys.rs  loader.rs  mod.rs  recording.rs  storage.rs
clipforge_ui/: README.md  dev-app-update.yml  electron-builder.yml  electron.vite.config.ts  package-lock.json  package.json  pubspec.yaml  readme.md
clipforge_ui/lib/: app.dart  main.dart
clipforge_ui/lib/config/: config_service.dart
clipforge_ui/windows/: CMakeLists.txt
clipforge_webapp/: index.html  package-lock.json  package.json  readme.md  vite.config.ts
(+79 files in other folders)
